[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/GameOver.gd" id="1_go"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_go")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(520, 380)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1

[node name="Label_Character" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="Label_Stage" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="Label_Deck" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="Label_Gold" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="BtnTitle" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "タイトルへ戻る"
